force-app/main/default/objects/configCDP_LWC__mdt/configCDP_LWC__mdt.object-meta.xml
<CustomObject>
    <label>configCDP_LWC</label>
    <pluralLabel>configCDP_LWC</pluralLabel>
</CustomObject>