force-app/main/default/objects/configCDP_LWC__mdt/fields/audience__c.field-meta.xml
<CustomField>
    <fullName>audience__c</fullName>
    <defaultValue>&apos;https://login.salesforce.com&apos;</defaultValue>
    <description>The audience identifies the authorization server as an intended audience. The authorization server must verify that it’s an intended audience for the token.

Use the authorization server’s URL for the audience value: https://login.salesforce.com, https://test.salesforce.com, or https://site.force.com/customers if implementing for an Experience Cloud site.</description>
    <inlineHelpText>The audience identifies the authorization server as an intended audience. The authorization server must verify that it’s an intended audience for the token.

Use the authorization server’s URL for the audience value: https://login.salesforce.com, https://test.salesforce.com, or https://site.force.com/customers if implementing for an Experience Cloud site.</inlineHelpText>
    <label>audience</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>