force-app/main/default/objects/configCDP_LWC__mdt/fields/certificateName__c.field-meta.xml
<CustomField>
    <fullName>certificateName__c</fullName>
    <label>certificateName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>