force-app/main/default/objects/configCDP_LWC__mdt/fields/issuer__c.field-meta.xml
<CustomField>
    <fullName>issuer__c</fullName>
    <description>The issuer must contain the OAuth client_id or the connected app for which you registered the certificate.</description>
    <inlineHelpText>The issuer must contain the OAuth client_id or the connected app for which you registered the certificate.</inlineHelpText>
    <label>issuer</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>