force-app/main/default/objects/configCDP_LWC__mdt/fields/subject__c.field-meta.xml
<CustomField>
    <fullName>subject__c</fullName>
    <inlineHelpText>If you’re implementing this flow for an Experience Cloud site, the subject must contain the user’s username.

For backward compatibility, you can use principal (prn) instead of subject (sub). If both are specified, prn is used.</inlineHelpText>
    <label>subject</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>